--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,6 +66,10 @@ body {
   color: rgb(255, 17, 0);
 }
 
+.menu-logo:hover {
+  cursor: pointer;
+}
+
 .header-btn{
   border: none;
   margin-left: 15px;
@@ -559,19 +563,48 @@ cursor: pointer;
 }
 
 /* league main page */
-.league-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
-  background-color: rgb(224, 224, 224);
-  width: 100%;
+@media screen and (max-width: 1000px) {
+  .league-bar {
+    flex-direction: column;
+    padding: 10px;
+  }
+  .league-bar > form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  #leagueSearch {
+    margin-right: 0;
+    width: 75%;
+    height: 30px;
+  }
+
+  .league-btn {
+    font-size: 14px;
+    width: 80%;
+    padding: 6px 12px;
+  }
 }
 
-#leagueSearch {
-  margin-left: 75px;
-  width: 500px;
+@media screen and (min-width: 1000px) {
+  .league-bar {
+    height: 70px;
+  }
+  #leagueSearch {
+    width: 40%;
+    margin-left: 50px;
+  }
 }
+.league-bar {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  background-color: rgb(224, 224, 224);
+  flex-wrap: wrap;
+}
+
 
 #league-overlay{
   position: absolute;
@@ -631,12 +664,17 @@ cursor: pointer;
 .league-btn {
   border: none;
   border-width: 1px;
-  height: 40px;
-  width: 150px;
+  padding: 8px 16px;
   border-radius: 5px;
   font-size: 14px;
   color: white;
+  transition: .2s;
+  cursor: pointer;
   background-color: rgb(255, 17, 0);
+}
+
+#create-league-btn {
+  background-color: black;
 }
 
 .league-btn:hover {
@@ -713,7 +751,7 @@ table.center {
 .league-user-table,
 .bet-info-table {
   font-size: 14px;
-  max-width: 1200px;
+  width: 80%;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-collapse: collapse;
