--- a/views/Placement.ejs
+++ b/views/Placement.ejs
@@ -8,6 +8,8 @@
     <script src="https://kit.fontawesome.com/212b4b3f17.js" crossorigin="anonymous"></script>
     <title>Placement Bets</title>
     <%- include('partials/head') %>
+    <%- include('partials/table_search_js') %>
+
 </head>
 <body id="body">
   <%- include('partials/header_layout') %>
@@ -23,6 +25,7 @@
       <div class="success-message"><%= successMessage %></div>
     <% } %> 
 
+    <%- include('partials/table_search') %>
     <table class="center bet-table">
         <tr class="table-head" id="table-head">
             <th style="width: 5%;">No.</th>
@@ -33,7 +36,7 @@
             <th></th>
         </tr>
         <% for (let i = 0; i < bets.length; i++) { %> 
-            <tr class="table-row">
+            <tr class="table-row bet-row" id="bet-row-<%- i %>">
                 <td data-label="No." onclick="getBetStats(`<%- bets[i].bet_id %>`, `<%- bets[i].Category %>`);"><%- i + 1 %> </td>
                 <td data-label="Bet Name" onclick="getBetStats(`<%- bets[i].bet_id %>`, `<%- bets[i].Category %>`);"><%- bets[i].BetName %> </td>
                 <td data-label="Bet Category" onclick="getBetStats(`<%- bets[i].bet_id %>`, `<%- bets[i].Category %>`);"><%- bets[i].Category %> </td>
