--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -25,7 +25,7 @@
             <label for="betSearch">Search User:</label>
             <select id="betSearch" onchange="scrollToBet();">
               <option value="" selected disabled>Select Bet</option>
-              <% for (let i = 0; i < bets.length; i++) { %>
+              <% for (let i = 0; i < name.length; i++) { %>
                 <option value="bet-row-<%- i %>"><%- name[i].FirstName %> " " <%- name[i].LastName %></option>
               <% } %>
             </select>
