--- a/views/LeagueOverview.ejs
+++ b/views/LeagueOverview.ejs
@@ -20,7 +20,7 @@
     <div>
         <h1 style="text-align: center;"><%- leagueName %></h1>
     </div>
-    <div>
+    <div class='bet-box'>
         <div class="mobile-only">
             <label for="betSearch">Search User:</label>
             <select id="betSearch" onchange="scrollToBet();">
