added guest sign in option

--- a/views/Index2.ejs
+++ b/views/Index2.ejs
@@ -64,6 +64,9 @@
         <form action="/login" class="form-width">
           <button type="submit" class="sign-in side-menu-button">SIGN IN</button>
         </form>
+        <form action="/UserAuth/loginUser/guest" method="POST" class="form-width">
+          <button type="submit" class="sign-in side-menu-button">SIGN IN AS GUEST</button>
+        </form>
         <form action="/registration" class="form-width">
           <button type="submit" class="register side-menu-button">REGISTER</button>
         </form>
@@ -116,6 +119,9 @@
         <form action="/login">
           <button class="sign-in header-btn" type="submit">SIGN IN</button>
         </form> 
+        <form action="/UserAuth/loginUser/guest" method="POST">
+          <button type="submit" class="sign-in header-btn">GUEST ACCNT</button>
+        </form>
         <form action="/registration">
           <button class="register header-btn" type="submit">REGISTER</button>
         </form>
