--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -25,7 +25,7 @@
             <h1>Sign In</h1>
         </div>
         <div>
-            <form class="form" action="/UserAuth/loginUser" method="POST">
+            <form class="form" action="/UserAuth/loginUser/user" method="POST">
                 <label for="email">Email Address</label>
                 <input type="email" name="email" placeholder="Email Address" minlength="1" max="40" required>
                 <label for="password">Password</label>
