--- a/views/partials/header_layout.ejs
+++ b/views/partials/header_layout.ejs
@@ -9,6 +9,9 @@
         <form action="/login" class="form-width">
             <button type="submit" class="sign-in side-menu-button">SIGN IN</button>
         </form>
+        <form action="/guest" class="form-width">
+            <button type="submit" class="sign-in side-menu-button">SIGN IN AS GUEST</button>
+        </form>
         <form action="/registration" class="form-width">
             <button type="submit" class="register side-menu-button">REGISTER</button>
         </form>
